WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53399
FindController::updateFindIndicator() crashes if selection isn't visible
https://bugs.webkit.org/show_bug.cgi?id=53399
Summary
FindController::updateFindIndicator() crashes if selection isn't visible
Jeff Miller
Reported
2011-01-30 09:54:35 PST
1. Goto www.google.com in Safari. 2. Type Ctrl+F to bring up find in page. 3. Search for "goo". This results in 3 matches, only 2 of which are visible. 4. Hit F3, F3, F3 to go to the third, invisible match. 5. WebKit process crashes.
Attachments
Patch
(1.52 KB, patch)
2011-01-30 10:11 PST
,
Jeff Miller
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeff Miller
Comment 1
2011-01-30 10:11:01 PST
Created
attachment 80595
[details]
Patch
mitz
Comment 2
2011-01-30 10:15:54 PST
Comment on
attachment 80595
[details]
Patch Is there a way to make an API test for this?
Jeff Miller
Comment 3
2011-01-30 10:34:33 PST
It seems like this should be possible with some changes to Tools/TestWebKitAPI/Tests/WebKit2/Find.cpp and Find.html, I'll look into this.
WebKit Commit Bot
Comment 4
2011-01-30 12:04:54 PST
Comment on
attachment 80595
[details]
Patch Clearing flags on attachment: 80595 Committed
r77091
: <
http://trac.webkit.org/changeset/77091
>
WebKit Commit Bot
Comment 5
2011-01-30 12:04:58 PST
All reviewed patches have been landed. Closing bug.
Steve Falkenburg
Comment 6
2011-01-30 14:00:54 PST
Ignore my r+ looks like this was already fixed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug