2011-01-30  Jeff Miller  <jeffm@apple.com>

Reviewed by Dan Bernstein.

        FindController::updateFindIndicator() crashes if selection isn't visible
        https://bugs.webkit.org/show_bug.cgi?id=53399

        * WebProcess/WebPage/FindController.cpp:
        (WebKit::FindController::updateFindIndicator): Return false if ShareableBitmap::createShareable() returns null (typically because the selection rect is empty).

Canonical link: https://commits.webkit.org/67244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77091 268f45cc-cd09-0410-ab3c-d52691b4dbfc